# NumerisationDeCourbes

./: CMakeLists.txt  NumerisationDeCourbes.doxyfile  NumerisationDeCourbes.pro  README.md
doc/: NumerisationDeCourbes.doxyfile
examples/: MesParametres.prm  MonEtude.ndc
exemples/: MonEtude.ndc  MonExport.csv
include/: EcranPrincipal.h  Etude.h  FenetreDocumentation.h  FenetreGraphique.h  FenetreParametresAffichage.h  FenetreParametresConversion.h  FenetreParametresExport.h  FenetreParametresRecherche.h  Image.h  Outils.h  Parametres.h  ParametresAffichage.h  ParametresAxe.h  ParametresConversion.h  ParametresExport.h  ParametresFichiers.h  ParametresGraphique.h  ParametresPoint.h  ParametresRecherche.h  ParametresTrait.h  Point.h  Repere.h  VueGraphiqueEtude.h
interfaces/: EcranPrincipal.ui  FenetreDocumentation.ui  FenetreGraphique.ui  FenetreParametresAffichage.ui  FenetreParametresConversion.ui  FenetreParametresExport.ui  FenetreParametresRecherche.ui
resources/: Ressources.qrc
ressources/: Ressources.qrc
source/: EcranPrincipal.cpp  Etude.cpp  FenetreDocumentation.cpp  FenetreGraphique.cpp  FenetreParametresAffichage.cpp  FenetreParametresConversion.cpp  FenetreParametresExport.cpp  FenetreParametresRecherche.cpp  Image.cpp  NumerisationDeCourbes.cpp  Outils.cpp  Parametres.cpp  ParametresAffichage.cpp  ParametresAxe.cpp  ParametresConversion.cpp  ParametresExport.cpp  ParametresFichiers.cpp  ParametresGraphique.cpp  ParametresPoint.cpp  ParametresRecherche.cpp  ParametresTrait.cpp  Point.cpp  Repere.cpp  VueGraphiqueEtude.cpp
